--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -1,10 +1,13 @@
-// .navbar {
-//     @include displayflexrow;
-//     align-items: center;
-//     color:$secondary-color;
-//     background-color: $special-color;
-//     height: 60px;
-//     ul{
-//         @include displayflexrow;
-//     }
-// }
+.navbar{
+    color: white;
+}
+.colorNavbar1{       
+    transition: background-color  0.2s ease-in;    
+     
+  }
+  .colorNavbar2{
+    height: 60px ;
+    background-color: #A1572F;    
+    transition: background-color 0.2s ease-in;
+    
+  }
