creation of the site skeleton

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -182,17 +182,13 @@ p, li, a {
 }
 
 .navbar {
-  color: white;
+  background-color: white;
+  transition: background-color 500ms linear;
 }
 
-.colorNavbar1 {
-  transition: background-color  0.2s ease-in;
-}
-
-.colorNavbar2 {
-  height: 60px;
-  background-color: #A1572F;
-  transition: background-color 0.2s ease-in;
+.scrolled {
+  background-color: rgba(0, 0, 0, 0.75);
+  transition: background-color 500ms linear;
 }
 
 .delivery-container {
