--- a/public/css/main.css
+++ b/public/css/main.css
@@ -182,12 +182,12 @@ p, li, a {
 }
 
 .navbar {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
   transition: background-color 500ms linear;
 }
 
 .scrolled {
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: #fc8080;
   transition: background-color 500ms linear;
 }
 
