--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -16,6 +16,20 @@
 //       z-index: 6;
       
 //   }
-.navbar { background-color: rgb(255,255,255); -webkit-transition: background-color 500ms linear; -moz-transition: background-color 500ms linear; -ms-transition: background-color 500ms linear; transition: background-color 500ms linear; }
+.navbar { 
+    background-color: rgba(255,255,255,0); 
+    -webkit-transition: background-color 500ms linear; 
+    -moz-transition: background-color 500ms linear; 
+    -ms-transition: background-color 500ms linear; 
+    transition: background-color 500ms linear; 
+}
 
-.scrolled { background-color: rgba(0,0,0,0.75); -webkit-transition: background-color 500ms linear; -moz-transition: background-color 500ms linear; -ms-transition: background-color 500ms linear; transition: background-color 500ms linear; }
+.scrolled { 
+    // height: 60px;// media query
+    background-color: #fc8080; 
+    -webkit-transition: background-color 500ms linear; 
+    -moz-transition: background-color 500ms linear; 
+    -ms-transition: background-color 500ms linear; 
+    transition: background-color 500ms linear; 
+    
+}
