--- a/public/css/sass/layouts/_layouts.scss
+++ b/public/css/sass/layouts/_layouts.scss
@@ -1,7 +1,5 @@
 @import "./header",
-"./delivery-container",
-"./best-sales-container",
-"./ourplant-container",
+"./profile",
 "./footer",
 "./mediaquery";
 
