--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -17,11 +17,12 @@
       
 //   }
 .navbar { 
-    background-color: rgba(255,255,255,0); 
+    background-color: rgba(255,255,255,0); // media query
     -webkit-transition: background-color 500ms linear; 
     -moz-transition: background-color 500ms linear; 
     -ms-transition: background-color 500ms linear; 
     transition: background-color 500ms linear; 
+    
 }
 
 .scrolled { 
@@ -31,5 +32,6 @@
     -moz-transition: background-color 500ms linear; 
     -ms-transition: background-color 500ms linear; 
     transition: background-color 500ms linear; 
+    
     
 }
