--- a/public/css/main.css
+++ b/public/css/main.css
@@ -183,12 +183,14 @@ p, li, a {
 
 .navbar {
   background-color: rgba(255, 255, 255, 0);
-  transition: background-color 500ms linear;
+  transition: 500ms linear;
+  height: 80px;
 }
 
 .scrolled {
+  height: 60px;
   background-color: #fc8080;
-  transition: background-color 500ms linear;
+  transition: 500ms linear;
 }
 
 .parallax-window {
