--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,102 +40,20 @@ h3, h4, p, span, a {
   font-family: "Montserrat", sans-serif;
 }
 
-h1, li, .nav a {
-  color: #ffffff;
-}
-
-h2, h3, p, .footer a {
-  color: #000000;
-}
-
-h1 {
-  font-size: 40px;
-  width: 60%;
-  font-weight: 100;
-  line-height: 100%;
-}
-
 h2 {
-  font-size: 25px;
+  font-size: 24px;
 }
 
 h3 {
-  font-size: 19px;
+  font-size: 20px;
 }
 
-i {
-  font-size: 17px;
+h4 {
+  font-size: 16px;
 }
 
-h4, span {
+p, a {
   font-size: 15px;
-}
-
-p, li, a {
-  font-size: 14px;
-}
-
-@media only screen and (min-width: 25px) {
-  h1 {
-    font-size: 40px;
-  }
-  h2 {
-    font-size: 30px;
-  }
-  h3 {
-    font-size: 22px;
-  }
-  i {
-    font-size: 17px;
-  }
-  h4 {
-    font-size: 15px;
-  }
-  p, span, li, a {
-    font-size: 14px;
-  }
-}
-
-@media only screen and (min-width: 992px) {
-  h1 {
-    font-size: 50px;
-  }
-  h2 {
-    font-size: 40px;
-  }
-  h3 {
-    font-size: 25px;
-  }
-  i {
-    font-size: 18px;
-  }
-  h4 {
-    font-size: 15px;
-  }
-  p, span, li, a {
-    font-size: 14px;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  h1 {
-    font-size: 80px;
-  }
-  h2 {
-    font-size: 50px;
-  }
-  h3 {
-    font-size: 30px;
-  }
-  i {
-    font-size: 20px;
-  }
-  h4 {
-    font-size: 16px;
-  }
-  p, span, li, a {
-    font-size: 15px;
-  }
 }
 
 .plant {
@@ -188,8 +106,8 @@ p, li, a {
 }
 
 .scrolled {
-  height: 60px;
-  background-color: #fc8080;
+  height: 120px;
+  background-color: #013044;
   transition: 500ms linear;
 }
 
@@ -253,12 +171,12 @@ p, li, a {
 
 .content-center {
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   padding: 0 15px;
-  color: #FFFFFF;
+  color: #ffffff;
   width: 100%;
   max-width: 880px;
 }
@@ -538,81 +456,15 @@ p, li, a {
   text-align: center;
 }
 
-@media only screen and (min-width: 25px) {
-  .hamburger {
-    display: block;
-  }
-  .nav {
-    display: none;
-  }
-  .titlescroll {
-    margin: -2.92vw  8vw;
-  }
-  .titlescroll h1 {
-    margin-top: 60px;
-  }
-}
-
 @media only screen and (min-width: 992px) {
-  .hamburger {
-    display: none;
-  }
-  .nav {
-    display: flex;
-  }
-  .nav2 {
-    display: none;
-  }
-  .titlescroll {
-    margin: -2.92vw  8vw;
-  }
-  .best-sales-container {
-    margin: 0 100px 50px;
-  }
-  .plants1 {
-    width: 50%;
-  }
-  .ourplant-container {
-    margin: 0 100px 50px;
-  }
-  .ourplant-plant {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 500px 500px 500px;
-    grid-template-areas: "a b" "c d" "e f";
+  .scrolled {
+    height: 60px;
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .hamburger {
-    display: none;
-  }
-  .nav {
-    display: flex;
-  }
-  .nav2 {
-    display: none;
-  }
-  .titlescroll {
-    margin: -2.92vw  8vw;
-  }
-  .best-sales-container {
-    margin: 0 100px 50px;
-  }
-  .best-sales-plant1,
-  .best-sales-plant2,
-  .best-sales-plant3 {
-    width: 33.33%;
-  }
-  .best-sales-plant4 {
-    width: 100%;
-  }
-  .ourplant-container {
-    margin: 0 100px 50px;
-  }
-  .ourplant-plant {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 500px 500px 500px 500px;
-    grid-template-areas: "a a b b" "a a c c" "d e e f" "d e e f";
+  .scrolled {
+    height: 60px;
   }
 }
 
@@ -648,7 +500,7 @@ p, li, a {
   background-size: 5% 100%;
 }
 
-@media only screen and (min-width: 25px) {
+@media only screen and (min-width: 20px) {
   .hamburger {
     display: block;
   }
