--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -1,48 +1,46 @@
     //Variables Colors
-    $primary-color:#000000;
+    $primary-color1:#302f2f;
+    $primary-color2:#9c9696;
     $secondary-color:#ffffff;
-    $special-color:#cd3280;
+    $special-color:#013044;
     //Variables font family
-    $montserrat:'Montserrat';
-    $sans-serif:sans-serif;
-    $cursive: 'cursive';
-    $abril-fatface: 'Abril Fatface';
+    $fontfamily:'Montserrat, Helvetica Neue, Arial, sans-serif';
+   
     //Variable Padding for section
     $padding-left-right:100px;
     $padding-top:70px;
     $padding-bottom:0px;
-    //Variables Break-points    
+    //Variables Break-points   
+
     $large-phone:768px;
     $tablet:992px;
     $desktop:1200px;
-    // $desktop-large:1400px;
-    //Variable Font size
-    //for phone
-    // $font-size-mobile: 30px 18px 16px 14px 13px 12px;
-    $extralarge-phone: 40px;
-    $large-phone: 25px;
-    $medium-phone: 19px;
-    $lessmedium-phone: 17px;
-    $small-phone: 15px;
-    $extrasmall-phone: 14px;
+   
+    
+    //Variable Font size   
     //for large phone
-    $extralarge-largephone: 40px;
-    $large-largephone: 30px;
-    $medium-largephone: 22px;
-    $lessmedium-largephone: 17px;
-    $small-largephone: 15px;
-    $extrasmall-largephone: 14px;
+    $extralarge-large-phone: 36px;
+    $large-large-phone: 26px;
+    $extramedium-large-phone:22px;
+    $medium-large-phone: 16px;
+    $lessmedium-large-phone: 14px;
+    $extrasmall-large-phone:13px;
+    $small-large-phone:12px;
     //for tablet
-    $extralarge-tablet: 50px;
-    $large-tablet: 40px;
-    $medium-tablet: 25px;
-    $lessmedium-tablet: 18px;
-    $small-tablet: 15px;
-    $extrasmall-tablet: 14px;
+    $extralarge-tablet: 36px;
+    $large-tablet: 26px;
+    $extramedium-tablet:22px;
+    $medium-tablet: 16px;
+    $lessmedium-tablet: 14px;
+    $extrasmall-tablet:13px;
+    $small-tablet:12px;
     //for desktop
-    $extralarge-desktop: 80px;
-    $large-desktop: 50px;
-    $medium-desktop: 30px;
-    $lessmedium-desktop: 20px;
-    $small-desktop: 16px;
-    $extrasmall-desktop: 15px;
+    $extralarge-desktop: 36px;
+    $large-desktop: 26px;
+    $extramedium-desktop:22px;
+    $medium-desktop: 16px;
+    $lessmedium-desktop: 14px;
+    $extrasmall-desktop:13px;
+    $small-desktop:12px;
+
+    
