--- a/public/css/sass/bases/_typography.scss
+++ b/public/css/sass/bases/_typography.scss
@@ -2,62 +2,50 @@
 /*-------------fonts---------------*/
 
 //font family
-h1,h2 {font-family: $abril-fatface, $cursive;}
-h3,h4,p,span,a {font-family: $montserrat, $sans-serif;}
+h1,h2 {font-family:  $fontfamily;}
+h3,h4,p,span,a {font-family: $fontfamily;}
 
 //font color
-h1,li,.nav a{color: $secondary-color;} //white
-h2,h3,p,.footer a{color: $primary-color;} // black
+.navbar-brand {
+
+}
+h1,li,.nav a{
+
+} //white
+h2,h3,p,.footer a{
+    
+} // black
 
 //font others
 
 
 
-h1 {
-    font-size: $extralarge-phone;
-    width: 60%;
-    font-weight: 100;
-    line-height: 100%;
-}
 h2 {
-    font-size: $large-phone;
+    font-size: $extralarge-phone;
+    // width: 60%;
+    // font-weight: 100;
+    // line-height: 100%;
 }
 h3 {
+    font-size: $large-phone;
+}
+h4 {
     font-size: $medium-phone;
 }
-i {
+
+p,a{
     font-size: $lessmedium-phone;
 }
-h4,span{
-    font-size: $small-phone;
-}
-p,li,a {
-    font-size: $extrasmall-phone;
-}
+
 
 //media query
 @include for-phone {
     //display nav
-    h1{font-size: $extralarge-largephone;}
-    h2{font-size: $large-largephone;}
-    h3{font-size: $medium-largephone;}
-    i{font-size: $lessmedium-largephone;}
-    h4{font-size: $small-largephone;}
-    p,span,li,a{font-size: $extrasmall-largephone;}
+   
 }
 @include for-tablet {
-    h1{font-size:  $extralarge-tablet; }
-    h2{font-size: $large-tablet;}
-    h3{font-size: $medium-tablet;}
-    i{font-size: $lessmedium-tablet;}
-    h4{font-size: $small-tablet;}
-    p,span,li,a{font-size: $extrasmall-tablet;}
+   
 }
 @include for-desktop {
-    h1{font-size: $extralarge-desktop;}
-    h2{font-size: $large-desktop;}
-    h3{font-size: $medium-desktop;}
-    i{font-size: $lessmedium-desktop;}
-    h4{font-size: $small-desktop;}
-    p,span,li,a{font-size: $extrasmall-desktop;}
+  
 }
