--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -10,37 +10,32 @@
     $padding-left-right:100px;
     $padding-top:70px;
     $padding-bottom:0px;
+    
     //Variables Break-points   
-
     $large-phone:768px;
     $tablet:992px;
     $desktop:1200px;
    
     
-    //Variable Font size   
-    //for large phone
+    //Variables Font size       
     $extralarge-large-phone: 36px;
     $large-large-phone: 26px;
     $extramedium-large-phone:22px;
-    $medium-large-phone: 16px;
+    $medium-large-phone: 15px;
     $lessmedium-large-phone: 14px;
     $extrasmall-large-phone:13px;
     $small-large-phone:12px;
-    //for tablet
-    $extralarge-tablet: 36px;
-    $large-tablet: 26px;
-    $extramedium-tablet:22px;
-    $medium-tablet: 16px;
-    $lessmedium-tablet: 14px;
-    $extrasmall-tablet:13px;
-    $small-tablet:12px;
-    //for desktop
-    $extralarge-desktop: 36px;
-    $large-desktop: 26px;
-    $extramedium-desktop:22px;
-    $medium-desktop: 16px;
-    $lessmedium-desktop: 14px;
-    $extrasmall-desktop:13px;
-    $small-desktop:12px;
+   
+    //Variables font weight
+    $bigweight: 700;
+    $mediumweight:500;
+    $smallweight:400;
 
+    //Variables line height
+    $weight1:39px;
+    $weight2:35px;
+    $weight3:31px;
+    $weight4:26px;
+    $weight5:23px;
+    $weight6:21px
     
