--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -1,4 +1,17 @@
 .navbar { 
+    li{
+        color:white;
+    }
+    li a{
+        transition:  500ms linear; 
+        color:white;
+    }
+    li a:hover{
+       background-color: rgba(255, 255, 255, 0.349);
+       border-radius: 5px;
+    //    color: rgb(3, 65, 83);
+    }
+    color:white;
     background-color: rgba(255,255,255,0); // media query
     -webkit-transition:  500ms linear; 
     -moz-transition:  500ms linear; 
@@ -19,3 +32,4 @@
     transition:  500ms linear; 
     
 }
+
