--- a/public/css/main.css
+++ b/public/css/main.css
@@ -97,16 +97,16 @@ h3 {
   height: 80px;
 }
 
-.navbar li {
+.navbar ul li {
   color: white;
 }
 
-.navbar li a {
+.navbar ul li a {
   transition: 500ms linear;
   color: white;
 }
 
-.navbar li a:hover {
+.navbar ul li a:hover {
   background-color: rgba(255, 255, 255, 0.349);
   border-radius: 5px;
 }
