--- a/public/css/sass/bases/_bases.scss
+++ b/public/css/sass/bases/_bases.scss
@@ -14,10 +14,10 @@
 body {
     width: 100%;
     background-color: #ffffff;
+    a:hover{
+        text-decoration: none ;          
+    }
+    
 }
 
-// 
-a {
-    text-decoration: none;
-    color: white;
-}
+
