--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -1,22 +1,19 @@
-.navbar { 
-    li{
-        color:white;
-    }
-    li a{
+
+.navbar {    
+    a{
         transition:  500ms linear; 
-        color:white;
+        color:white !important;
     }
-    li a:hover{
+    a:not(.logo):hover{
        background-color: rgba(255, 255, 255, 0.349);
        border-radius: 5px;
     //    color: rgb(3, 65, 83);
-    }
-    color:white;
+    }   
+   
     background-color: rgba(255,255,255,0); // media query
     -webkit-transition:  500ms linear; 
     -moz-transition:  500ms linear; 
-    -ms-transition:  500ms linear; 
-    // transition: background-color 500ms linear; 
+    -ms-transition:  500ms linear;    
     transition:  500ms linear; 
     height: 80px;
     
@@ -24,12 +21,11 @@
 
 .scrolled {  
     height: 120px;     
-    background-color: $special-color; 
+    background-image: $special-color; 
     -webkit-transition:  500ms linear; 
     -moz-transition:  500ms linear; 
     -ms-transition:  500ms linear; 
-    // transition: background-color 500ms linear; 
-    transition:  500ms linear; 
-    
+    transition:  500ms linear;     
 }
+
 
