--- a/public/css/main.css
+++ b/public/css/main.css
@@ -119,6 +119,7 @@ h4, .logo {
 .navbar a:not(.logo):hover {
   background-color: rgba(255, 255, 255, 0.349);
   border-radius: 5px;
+  color: #034153;
 }
 
 .scrolled {
