--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -7,7 +7,7 @@
     a:not(.logo):hover{
        background-color: rgba(255, 255, 255, 0.349);
        border-radius: 5px;
-    //    color: rgb(3, 65, 83);
+       color: rgb(3, 65, 83);
     }   
    
     background-color: rgba(255,255,255,0); // media query
