--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -20,7 +20,7 @@
 }
 
 .scrolled {  
-    // height: 120px;     
+    height: 120px;     
     background-image: $special-color; 
     -webkit-transition:  500ms linear; 
     -moz-transition:  500ms linear; 
