--- a/public/css/sass/bases/_typography.scss
+++ b/public/css/sass/bases/_typography.scss
@@ -3,7 +3,7 @@
 
 //font family
 body{
-    font-family: $fontfamily;
+    font-family:Montserrat,'Helvetica Neue', Arial, sans-serif;
 }
 
 //font color
