--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -31,11 +32,11 @@ body a:hover {
 
 /*-------------fonts---------------*/
 body {
-  font-family: Montserrat, "Helvetica Neue", Arial, sans-serif;
+  font-family: Montserrat,'Helvetica Neue', Arial, sans-serif;
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 45px;
 }
 
 h2 {
@@ -110,7 +111,6 @@ h4, .logo {
   top: 0;
   background-color: rgba(255, 255, 255, 0);
   transition: 0.3s linear;
-  height: 80px;
 }
 
 .navbar a {
@@ -137,8 +137,8 @@ h4, .logo {
   background: transparent;
 }
 
-.logo {
-  font-size: url(../../../fonts/PragmaticaMedium.otf) !important;
+.content-center h1 {
+  font-family: 'Cinzel Decorative', cursive;
 }
 
 .profile-img a {
@@ -147,7 +147,7 @@ h4, .logo {
 
 .profile-img a:before {
   content: "";
-  border: 40px solid rgba(2, 2, 2, 0.6);
+  border: 40px solid rgba(78, 130, 151, 0.3);
   box-shadow: 0 0 0 0 black;
   border-radius: 50%;
   height: 180px;
@@ -213,14 +213,15 @@ h4, .logo {
 }
 
 .bubble {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   border-radius: 100%;
   position: absolute;
   background: #275b7a;
   background: radial-gradient(circle, #275b7a 0%, white 83%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#275b7a",endColorstr="#ffffff",GradientType=1);
   bottom: -10px;
+  opacity: 0.3;
   animation: bubble 15s ease-in-out infinite, sideWays 4s ease-in-out infinite alternate;
 }
 
@@ -238,16 +239,21 @@ h4, .logo {
   0% {
     margin-left: 0px;
   }
-  100% {
+  50% {
     margin-left: 3em;
+  }
+  100% {
+    margin-left: 1em;
   }
 }
 
 .bubble--1 {
-  left: 10%;
+  width: 15px;
+  height: 15px;
+  left: 15%;
   animation-delay: 0.5s;
   animation-duration: 16s;
-  opacity: 0.2;
+  opacity: 0.3;
 }
 
 .bubble--2 {
@@ -271,8 +277,8 @@ h4, .logo {
 .bubble--4 {
   width: 25px;
   height: 25px;
-  left: 40%;
-  animation-delay: 8s;
+  left: 45%;
+  animation-delay: 3s;
   animation-duration: 17s;
   opacity: 0.2;
 }
@@ -281,16 +287,16 @@ h4, .logo {
   width: 30px;
   height: 30px;
   left: 60%;
-  animation-delay: 10s;
+  animation-delay: -10s;
   animation-duration: 15s;
   opacity: 0.1;
 }
 
 .bubble--6 {
-  width: 10px;
-  height: 10px;
-  left: 80%;
-  animation-delay: 3s;
+  width: 30px;
+  height: 30px;
+  left: 90%;
+  animation-delay: 10s;
   animation-duration: 30s;
   opacity: 0.4;
 }
@@ -298,27 +304,25 @@ h4, .logo {
 .bubble--7 {
   width: 15px;
   height: 15px;
-  left: 90%;
+  left: 25%;
   animation-delay: -7s;
   animation-duration: 25s;
   opacity: 0.3;
 }
 
 .bubble--9 {
-  width: 20px;
-  height: 20px;
-  left: 50%;
-  bottom: 30px;
-  animation-delay: -5s;
+  width: 30px;
+  height: 30px;
+  left: 38%;
+  animation-delay: 2s;
   animation-duration: 19s;
   opacity: 0.2;
 }
 
 .bubble--10 {
-  width: 40px;
-  height: 40px;
-  left: 30%;
-  bottom: 30px;
+  width: 20px;
+  height: 20px;
+  left: 20%;
   animation-delay: -21s;
   animation-duration: 16s;
   opacity: 0.3;
@@ -327,20 +331,54 @@ h4, .logo {
 .bubble--11 {
   width: 30px;
   height: 30px;
-  left: 60%;
-  bottom: 30px;
+  left: 70%;
   animation-delay: -13.75s;
-  animation-duration: 20s;
+  animation-duration: 15s;
   opacity: 0.3;
 }
 
-.bubble--11 {
+.bubble--12 {
   width: 25px;
   height: 25px;
-  left: 90%;
-  bottom: 30px;
-  animation-delay: -10.5s;
+  left: 95%;
+  animation-delay: 8s;
   animation-duration: 19s;
+  opacity: 0.3;
+}
+
+.bubble--13 {
+  width: 10px;
+  height: 10px;
+  left: 15%;
+  animation-delay: -5s;
+  animation-duration: 10s;
+  opacity: 0.3;
+}
+
+.bubble--14 {
+  width: 9px;
+  height: 9px;
+  left: 18%;
+  animation-delay: -9s;
+  animation-duration: 10s;
+  opacity: 0.4;
+}
+
+.bubble--15 {
+  width: 25px;
+  height: 25px;
+  left: 65%;
+  animation-delay: -8s;
+  animation-duration: 12s;
+  opacity: 0.3;
+}
+
+.bubble--16 {
+  width: 12px;
+  height: 12px;
+  left: 80%;
+  animation-delay: -11s;
+  animation-duration: 8s;
   opacity: 0.3;
 }
 
@@ -355,18 +393,6 @@ h4, .logo {
   width: 400px;
   margin: 10px;
   text-align: center;
-}
-
-@media only screen and (min-width: 992px) {
-  .scrolled {
-    height: 60px;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .scrolled {
-    height: 60px;
-  }
 }
 
 .flexrow {
