--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -16,7 +16,7 @@
     -moz-transition:  0.3s linear; 
     -ms-transition:  0.3s linear;    
     transition: 0.3s linear; 
-    height: 80px;
+    // height: 80px;
     
 }
 .invisible{
