--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -142,7 +142,7 @@
 	width: 15px;
 	height: 15px;
 	left: 15%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: 0.5s;
 	animation-duration: 16s;
 	opacity: 0.3;
