--- a/public/css/main.css
+++ b/public/css/main.css
@@ -261,6 +261,7 @@ h4, .logo {
   width: 15px;
   height: 15px;
   left: 40%;
+  bottom: 30px;
   animation-delay: 1s;
   animation-duration: 10s;
   opacity: 0.1;
