--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -152,7 +152,7 @@
 	width: 15px;
 	height: 15px;
 	left: 40%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: 1s;
 	animation-duration: 10s;
 	opacity: 0.1;
