--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -162,7 +162,7 @@
 	width: 10px;
 	height: 10px;
 	left: 30%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: 5s;
 	animation-duration: 20s;
 	opacity: 0.3;
