--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -172,7 +172,7 @@
 	width: 25px;
 	height: 25px;
 	left: 45%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: 3s;
 	animation-duration: 17s;
 	opacity: 0.2;
