--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -182,7 +182,7 @@
 	width: 30px;
 	height: 30px;
 	left: 60%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: -10s;
 	animation-duration: 15s;
 	opacity: 0.1;
