--- a/public/css/main.css
+++ b/public/css/main.css
@@ -301,6 +301,7 @@ h4, .logo {
   width: 30px;
   height: 30px;
   left: 90%;
+  bottom: 30px;
   animation-delay: 10s;
   animation-duration: 30s;
   opacity: 0.4;
