--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -192,7 +192,7 @@
 	width: 30px;
 	height: 30px;
 	left: 90%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: 10s;
 	animation-duration: 30s;
 	opacity: 0.4;
