--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -202,7 +202,7 @@
 	width: 15px;
 	height: 15px;
 	left: 25%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: -7s;
 	animation-duration: 25s;
 	opacity: 0.3;
@@ -212,7 +212,7 @@
 	width: 30px;
 	height: 30px;
 	left: 38%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: 2s;
 	animation-duration: 19s;
 	opacity: 0.2;
@@ -222,7 +222,7 @@
 	width: 20px;
 	height: 20px;
 	left: 20%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: -21s;
 	animation-duration: 16s;
 	opacity: 0.3;
@@ -232,7 +232,7 @@
 	width: 30px;
 	height: 30px;
 	left: 70%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: -13.75s;
 	animation-duration: 15s;
 	opacity: 0.3;
@@ -242,7 +242,7 @@
 	width: 25px;
 	height: 25px;
 	left: 95%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: 8s;
 	animation-duration: 19s;
 	opacity: 0.3;
@@ -252,7 +252,7 @@
 	width: 10px;
 	height: 10px;
 	left: 15%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: -5s;
 	animation-duration: 10s;
 	opacity: 0.3;
@@ -262,7 +262,7 @@
 	width: 9px;
 	height: 9px;
 	left: 18%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: -9s;
 	animation-duration: 10s;
 	opacity: 0.4;
@@ -272,7 +272,7 @@
 	width: 25px;
 	height: 25px;
 	left: 65%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: -8s;
 	animation-duration: 12s;
 	opacity: 0.3;
@@ -282,7 +282,7 @@
 	width: 12px;
 	height: 12px;
 	left: 80%;
-	// bottom: 30px;
+	bottom: 30px;
 	animation-delay: -11s;
 	animation-duration: 8s;
 	opacity: 0.3;
