--- a/public/css/sass/bases/_typography.scss
+++ b/public/css/sass/bases/_typography.scss
@@ -2,6 +2,7 @@
 /*-------------fonts---------------*/
 
 //font family
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&display=swap');
 body{
     font-family:Montserrat,'Helvetica Neue', Arial, sans-serif;
 }
