--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -2,12 +2,12 @@
 .navbar {    
     a{
         transition:  500ms linear; 
-        color:white !important;
+        color:$color-profile !important;
     }
     a:not(.logo):hover{
-       background-color: rgba(255, 255, 255, 0.349);
+       background-color: $color-bgLinkNav;
        border-radius: 5px;
-       color: rgb(3, 65, 83);
+       color:  $color-linkNavHover !important;
     }   
     position: fixed;
     top:0;
@@ -24,7 +24,8 @@
 }
 .scrolled {  
     // height: 300px;     
-    background-image: $special-color;    
+    background-image: $color-bgNav;   
+    opacity: 0.9; 
 }
 
 
